# trader

./: .gitignore  Bibbia.md  CLAUDE.md  README.md  README_SAFEGUARDS.md  SAFEGUARDS_IMPLEMENTATION.md  SYSTEM_ARCHITECTURE.md  Xbox_Tracker_UI_Concepts.pptx  ai_cascade_classifier.py  ai_classifier.py  alert_log.json  alerts.py  classifier.py  cleanup_and_optimize.py  config.toml  console_catalog.md  db.py  db_ebay.py  db_safeguards.py  db_subito.py  ebay.db  export_static.py  flusso.md  id_utils.py  job_runs.py  log_status.py  logging_setup.py  migrate_to_tracker.py  migrations.py  mock-up.htm  model_rules.py  paths.py  problemi.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_report.py  scrape_with_safeguards.py  server.py  (+9 more)
.claude/: launch.json
.devcontainer/: devcontainer.json
.gemini/: settings.json
STORICI3GIUGNO/: README.md
catalogs/: xbox_bibbia_2026-06-05.json  xbox_taxonomy_2026-06-03.json
deploy/: auto_deploy.sh  backup_db.sh  bootstrap_ubuntu.sh  gen_workflows.py  merge_local_into_server.py  prepare_deploy_key.sh  residential_scrape.sh  server_job.sh  trader.env.example
docs/: Espansione.html  digitalocean-migration.md  runbook.md  server-routines.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
logs/: IMPLEMENTATION_SUMMARY_20260407.json  cleanup_report_20260407_171031.json  coverage_history.csv  implementation_baseline_2026-03-25_18-06-50.json  run_report_latest.json  test_integration.txt  valuation_tuning_latest.json
scrapers/: base.py  cex.py  ebay.py  gamelife.py  gamepeople.py  (+4 more)
(+68 files in other folders)
