[project]
name = "xbox-trader"
version = "0.1.0"
description = "Multi-source Xbox console tracker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright==1.52.0",
  "requests==2.31.0",
  "beautifulsoup4==4.12.3",
  "anthropic==0.25.0",
  "tomli==2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "ruff==0.13.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
